--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
+    "mongoose": "^6.0.4",
     "node": "16.6.1",
     "nodemon": "^2.0.12"
   },
